# CTP

./: Makefile  README.md  conf.json  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
ctp/: __init__.py  conf.py  ctp.py  run.py  utils.py
docs/: developers_guide.md
src/ctp/: __init__.py  ctp.py  experiment.py  manager.py  run.py  utils.py
src/ctp/ctp_grpc/: ctp.proto  ctp_pb2.py  ctp_pb2_grpc.py
tests/: pipeline_test.py  server.py  server_test.py  test_error.py  test_pipeline.py  test_server.py  test_stress.py
